# RoomanTech2

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml  skills_taxonomy.json
data/job_descriptions/: sample_jd.txt
data/resumes/: README.md  sample_junior_frontend.txt  sample_mid_level.txt
models/: README.md  ranking_model.joblib  ranking_weights.json
notebooks/: 01_explore_parsing.ipynb
src/: __init__.py  api.py  main.py
src/features/: __init__.py  certifications_extractor.py  contact_extractor.py  education_extractor.py  experience_extractor.py  section_utils.py  skills_extractor.py
src/parser/: __init__.py  docx_parser.py  pdf_parser.py  text_cleaner.py
src/ranking/: __init__.py  gbm_model.py  jd_analyzer.py  model.py  ranker.py  scorer.py  train.py
src/similarity/: __init__.py  embedding_matcher.py  hybrid_scorer.py  tfidf_matcher.py
src/utils/: config.py  exceptions.py  io.py  logger.py
tests/: test_api.py  test_features.py  test_gbm_model.py  test_main.py  test_parser.py  test_ranking.py  test_similarity.py  test_utils.py
