[project]
name = "resume-ranker"
version = "0.1.0"
description = "AI resume parser & candidate ranking system — integrates with hireai.rooman.com"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
# E501: line length is a soft target, not a hard failure.
# N803/N806: `X`/`y` for feature matrices and labels is the scikit-learn
# convention used throughout src/ranking/model.py and train.py — renaming
# to snake_case would make the ML code less recognizable, not more correct.
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
